examples/type_system/failing/174_handle_missing_lbrace.flx
let x = 1 handle IO print(resume, msg) -> resume(msg)
let after = 1
